--- a/creep.yaml.example
+++ b/creep.yaml.example
@@ -2,6 +2,12 @@ xmpp:
  jid: creep@example.com
  resource: creep
  password: secret
+ autojoin: [
+  "test@conference.example.com",
+  "test2@conference.example.com",
+ ]
+ # when posting a message using plain/text, relay to this room
+ default_room: "test@conference.example.com"
  # optional: use server, port when SRV records are not available
  #server: xmpp.example.org
  #port: 5222
