ditch crappy basic auth, use creepy auth
RFC 2617 authentication sucks, just use a custom header, with base64
encoded password (http headers are ascii)

allow zero or more possible passwords (omit config value, use a value,
or use a list of values in the yaml config)

--- a/creep.yaml.example
+++ b/creep.yaml.example
@@ -16,4 +16,10 @@ http:
  host: 127.0.0.1
  port: 8000
  # optional: shared secret which has to be sent for authentication
- #secret: blaat
+ secret: blaat
+ # or... a list of possible secrets, of which one has to be provided
+ #secret: [
+ # "foo",
+ # "bar",
+ #]
+
