--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
-PyYAML
-dnspython
-slackbot
-boto3
-pylibmc
+backports.ssl-match-hostname==3.5.0.1
+boto3==1.4.4
+botocore==1.5.23
+dnspython==1.15.0
+docutils==0.13.1
+futures==3.0.5
+jmespath==0.9.1
+pylibmc==1.5.2
+python-dateutil==2.6.0
+PyYAML==3.12
+requests==2.13.0
+s3transfer==0.1.10
+six==1.10.0
+slackbot==0.4.1
+slacker==0.9.42
+websocket-client==0.40.0
+wheel==0.24.0
